changes - index and publication

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[01/2023] I have joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
-<li><p>[01/2023] <a href="aaa"><font color=red size=+0.5><b>New academic chapter!</b></font></a> I am currently with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
+<li><p>[01/2023] <font color=red size=+0.5><b>New academic chapter!</b></font> I am currently with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
 </li>
 <li><p>[01/2023] I have started working as an assistant professor at the School of Computer Science, Trinity College Dublin. </p>
 </li>
@@ -93,7 +93,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
+<li><p>[10/2021] <font color=red size=+0.5><b>Hot!!!</b></font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
 </li>
 <li><p>[10/2020] One postdoc position is available in my research group. Please contact me or <a href="mailto:wjhwang@pusan.ac.kr">prof. Won-Joo Hwang</a> if you are interested. <br /></p>
 </li>
@@ -103,11 +103,11 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[01/2021] I have received the <a href="Misc/Rv_Award_TVT_2020.pdf">Top Reviewer Award</a> from IEEE Transactions on Vehicular Technology in 2020.</p>
 </li>
-<li><p>[10/2020] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a> [Elsevier, Q1, IF 6.281]</p>
+<li><p>[10/2020] <font color=red size=+0.5><b>Hot!!!</b></font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a> [Elsevier, Q1, IF 6.281]</p>
 </li>
 <li><p>[10/2019] My paper on <a href="https://ieeexplore.ieee.org/document/8917566">MEC-NOMA using coalitional games</a> has been published by the IEEE Transactions on Vehicular Technology.</p>
 </li>
-<li><p>[12/2018] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have received a 5-year project from Korea NRF (500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
+<li><p>[12/2018] <font color=red size=+0.5><b>Hot!!!</b></font> I have received a 5-year project from Korea NRF (sole-PI, 500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
 </li>
 </ul>
 <p></div></p>
@@ -142,7 +142,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize cloud edge computing and future wireless systems. Specifically, his research focuses on three main thrusts, including edge intelligence, wireless for AI, and AI for wireless. He has been granted the Korea NRF Funding for outstanding young researchers from the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021. He is also an Editor of Journal of Network and Computer Applications and Scientific Reports and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-19 18:05:19 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-20 10:21:54 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
