--- a/publication.html
+++ b/publication.html
@@ -41,13 +41,19 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
+<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i>, Wiley-IEEE Press, 2023.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i>, Wiley-IEEE Press, 2023.</p>
+</li>
 <li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
 <li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch5">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET Digital Library, 2022.</p>
+<li><p>Z. Yang, <b>Q.-V. Pham</b>, C. Huang, Q. Yang, T. Guo, Y. Xu, and Z. Zhang, &ldquo;<a href="https://www.taylorfrancis.com/chapters/edit/10.1201/b22998-5/machine-learning-uav-communication-assisted-computing-networks-quoc-viet-pham-zhaohui-yang-chongwen-huang-qianqian-yang-tianhao-guo-yongjun-xu-zhaoyang-zhang">Machine Learning for UAV Communication-Assisted Computing Networks</a>,&rdquo; in <a href="https://www.taylorfrancis.com/books/edit/10.1201/b22998/secure-digitalized-future-mobility-yue-cao-omprakash-kaiwartya-tiancheng-li?refId=1b59be08-3b27-41d0-b3f4-20c38a281353&amp;context=ubx"><i>Secure and Digitalized Future Mobility: Shaping the Ground and Air Vehicles Cooperation</i></a>, CRC Press, 2022.</p>
 </li>
-<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch7">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET Digital Library, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch5">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <a href="https://digital-library.theiet.org/content/books/te/pbte104e"><i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i></a>, IET Digital Library, 2022.</p>
+</li>
+<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch7">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <a href="https://digital-library.theiet.org/content/books/te/pbte104e"><i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i></a>, IET Digital Library, 2022.</p>
 </li>
 <li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7"><i>Fog/Edge Computing For Security, Privacy, and Applications</i></a>, Springer, 2021.</p>
 </li>
@@ -354,7 +360,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-19 16:46:44 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-20 09:58:59 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
