--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[02/2023] <a href="https://www.advance-crt.ie/apply/">SFI AdvanceCRT</a> is currently recruiting 30 PhD students. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
+<li><p>[02/2023] <a href="team.html">Various scholarships</a> are available for MSc and PhD students. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
 </li>
 <li><p>[02/2023] Congratulations Dr. Nadia for our paper on <a href="">THz-UAV Communications using NOMA</a> being accepted to IEEE TVT.</p>
 </li>
@@ -142,7 +142,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize cloud edge computing and future wireless systems. Specifically, his research focuses on three main thrusts, including edge intelligence, wireless for AI, and AI for wireless. He has been granted the Korea NRF Funding for outstanding young researchers from the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021. He is also an Editor of Journal of Network and Computer Applications and Scientific Reports and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-20 10:21:54 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-20 11:11:41 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
