--- a/team.html
+++ b/team.html
@@ -59,9 +59,9 @@
 </li>
 <li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: Swarm intelligence for D2D communications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] : Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] - Topic: Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02] - Topic: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
 <li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Coalitional games for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
@@ -90,8 +90,6 @@
 </ul>
 <p><div id="Collaborators"></p>
 <h2>Collaborators</h2>
-<p><b>Prospective collaborators</b>: Please feel free to drop me an <a href="mailto:viet.pham@tcd.ie">email</a> to explore a visit to TCD-COIN group and our collaboration.<br /> </p>
-<p><b>Collaborators</b>:</p>
 <ul>
 <li><p><a href="https://wireless-ai.github.io/">Prof. Won-Joo Hwang</a>: Pusan National University (PNU), Korea</p>
 </li>
@@ -102,6 +100,8 @@
 <li><p><a href="https://sites.google.com/view/dinh-thai-hoang/">Prof. Dinh Thai Hoang</a>: University of Technology Sydney (UTS), Australia  </p>
 </li>
 <li><p><a href="https://sites.google.com/view/diep-n-nguyen">Prof. Diep Ngoc Nguyen</a>: University of Technology Sydney (UTS), Australia  </p>
+</li>
+<li><p><a href="https://sites.google.com/site/citulsan">Prof. Sunghwan Kim</a>: University of Ulsan, Korea  </p>
 </li>
 <li><p><a href="http://necphy-lab.com/">Prof. Long Bao Le</a>: University of Quebec, Canada</p>
 </li>
@@ -153,7 +153,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-20 11:07:00 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-22 11:10:23 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
