--- a/team.html
+++ b/team.html
@@ -38,38 +38,38 @@
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
-<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present] - Topic: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present]: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Daeil Noh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Daeil Noh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Sang Min Lee [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: communication-efficient FL for massive IoT in future 6G (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
+<li><p>Sang Min Lee [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: communication-efficient FL for massive IoT in future 6G (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08] - Topic: UAV communications in 5G and beyond (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
+<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]: UAV communications in 5G and beyond (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
 </li>
-<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: Swarm intelligence for D2D communications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
+<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02]: Swarm intelligence for D2D communications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] - Topic: Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02]: Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02] - Topic: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Coalitional games for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
+<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: Coalitional games for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
-<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: DRL for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: DRL for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: D2D communications with unlicensed spectrum (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: D2D communications with unlicensed spectrum (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Blockchain for smart healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: Blockchain for smart healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
 </ul>
 <p><div id="Visiting Scholars"></p>
@@ -113,6 +113,8 @@
 </li>
 <li><p><a href="https://sites.google.com/mun.ca/ming-zeng">Prof. Ming Zeng</a>: Laval University, Canada</p>
 </li>
+<li><p><a href="https://person.zju.edu.cn/en/yangzhaohui">Prof. Zhaohui Yang</a>: Zhejiang University, China</p>
+</li>
 <li><p><a href="https://pshhlab.github.io/nndao">Prof. Nhu-Ngoc Dao</a>: Sejong University, Korea</p>
 </li>
 <li><p><a href="https://sites.google.com/site/szuruby/">Prof. Rukhsana Ruby</a>: Shenzhen University, China</p>
@@ -153,7 +155,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-22 11:10:23 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-22 18:08:04 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
