--- a/publication.html
+++ b/publication.html
@@ -111,9 +111,9 @@
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
 </li>
-<li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
-</li>
 <li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 143, pp. 401-419, Jun. 2023.</p>
+</li>
+<li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, vol. 12, no. 2, pp. 27-34, Mar. 2023.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; <i>Engineering Applications of Artificial Intelligence</i>, vol. 117, pp. 105581, Jan. 2023.</p>
 </li>
@@ -360,7 +360,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-22 11:10:19 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-23 09:12:37 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
