--- a/publication.html
+++ b/publication.html
@@ -45,9 +45,9 @@
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i>, Wiley-IEEE Press, 2023.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
 <li><p>Z. Yang, <b>Q.-V. Pham</b>, C. Huang, Q. Yang, T. Guo, Y. Xu, and Z. Zhang, &ldquo;<a href="https://www.taylorfrancis.com/chapters/edit/10.1201/b22998-5/machine-learning-uav-communication-assisted-computing-networks-quoc-viet-pham-zhaohui-yang-chongwen-huang-qianqian-yang-tianhao-guo-yongjun-xu-zhaoyang-zhang">Machine Learning for UAV Communication-Assisted Computing Networks</a>,&rdquo; in <a href="https://www.taylorfrancis.com/books/edit/10.1201/b22998/secure-digitalized-future-mobility-yue-cao-omprakash-kaiwartya-tiancheng-li?refId=1b59be08-3b27-41d0-b3f4-20c38a281353&amp;context=ubx"><i>Secure and Digitalized Future Mobility: Shaping the Ground and Air Vehicles Cooperation</i></a>, CRC Press, 2022.</p>
 </li>
@@ -64,7 +64,7 @@
 <ol>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
 </li>
@@ -105,13 +105,13 @@
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
-<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
-</li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 143, pp. 401-419, Jun. 2023.</p>
+</li>
+<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, vol. 17, no. 1, pp. 964-975, Mar. 2023. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, vol. 12, no. 2, pp. 27-34, Mar. 2023.</p>
 </li>
@@ -360,7 +360,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-23 09:12:37 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-24 08:45:43 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
