--- a/teaching.html
+++ b/teaching.html
@@ -64,11 +64,13 @@
 </li>
 <li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/">https://web.stanford.edu/&nbsp;boyd/vmls/</a></p>
 </li>
+<li><p>Machine Learning Specialization: <a href="https://www.coursera.org/specializations/machine-learning-introduction">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
+</li>
 </ul>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-17 18:35:43 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-24 09:03:37 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
