--- a/publication.html
+++ b/publication.html
@@ -99,6 +99,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+</li>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
@@ -360,7 +362,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-24 08:45:43 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-24 17:04:07 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
