--- a/publication.html
+++ b/publication.html
@@ -41,9 +41,9 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i>, Wiley-IEEE Press, 2023.</p>
+<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <a href=""><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i>, Wiley-IEEE Press, 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <a href=""><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
@@ -62,6 +62,10 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
+</li>
+<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="">A Survey on Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; under review, <i>IEEE Journal of Biomedical and Health Informatics</i>.</p>
+</li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
@@ -99,7 +103,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="http://dx.doi.org/10.1109/JIOT.2023.3248970">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
@@ -362,7 +366,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-24 17:04:07 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-01 12:55:52 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
